--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'fabric-loom' version "${loom_version}"
-	id 'maven_publish'
+	id 'maven-publish'
 }
 
 version = project.mod_version
